--- a/app/src/main/res/values-notnight/colors.xml
+++ b/app/src/main/res/values-notnight/colors.xml
@@ -7,4 +7,6 @@
     <color name="input_background">#fff</color>
     <color name="placeholder">#A0A3BD</color>
     <color name="shimmer">#C3C3C3</color>
+    <color name="black">#FFFFFFFF</color>
+    <color name="white">#FF000000</color>
 </resources>
